--- a/sem1/experience.html
+++ b/sem1/experience.html
@@ -43,7 +43,7 @@
     </div>
     <div>
         <div class="image_div">
-            <img src="/home/only_sainaa/sict/magadlala-2.jpg" alt="HTML5 Icon" width="800" height="400">
+            <img src="src/pink.png" alt="HTML5 Icon" width="800" height="400">
         </div>
     </div>
     <div>
