--- a/sem1/main.html
+++ b/sem1/main.html
@@ -27,7 +27,7 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim id odit ipsa sapiente reiciendis. Deserunt fugiat qui unde eius ab similique ea facere quo, temporibus repudiandae. Ab officia quibusdam corrupti.
         </div>
         <div class="image_div">
-            <img src="/home/only_sainaa/sict/magadlala-2.jpg" alt="HTML5 Icon" width="400" height="600">
+            <img src="src/bulb.png" alt="HTML5 Icon" width="400" height="600">
         </div>
         <div>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima aliquam ullam animi a ipsum, quos cum deleniti porro ipsam molestias sit amet quas vero debitis? Sed eum eos magnam voluptates!
@@ -40,7 +40,7 @@
             <br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias praesentium quae est excepturi quo consequatur accusamus corporis eligendi nisi. Molestiae eaque quasi laudantium quibusdam qui fugiat illo voluptatum dignissimos praesentium!
         </div>
         <div class="image_div">
-            <img src="/home/only_sainaa/sict/magadlala-2.jpg" alt="HTML5 Icon" width="400" height="600">
+            <img src="src/balloon.png" alt="HTML5 Icon" width="400" height="600">
         </div>
         <div>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem voluptates adipisci rerum a quos distinctio at asperiores delectus, deserunt sint, tempora impedit rem architecto optio voluptate nostrum quaerat officiis vitae!
