--- a/sem1/order.html
+++ b/sem1/order.html
@@ -12,7 +12,7 @@
     </div>
     <div>
         Мэдээлэл бүрээ оруулна уу.
-        <form action="/action_page.php">
+        <form>
             <label for="fname">Таны нэр:</label><br>
             <input type="text" id="fname" name="fname"><br>
             <label for="lname">Таны утас:</label><br>
@@ -20,7 +20,7 @@
             <label for="lname">Таны мэйл:</label><br>
             <input type="text" id="lname" name="lname"><br><br>
             <input type="submit" value="Submit">
-          </form> 
+        </form> 
     </div>
     <div>
         <label for="cars">Choose a car:</label>
