--- a/sem2/daalgawal1.html
+++ b/sem2/daalgawal1.html
@@ -6,7 +6,7 @@
 <div id="form_div">
   <h1 id="center_text"; style="color: orangered;">Захиалгын форм</h1>
   <p id="center_text">Мэдээллээ бүрэн оруулна уу.</p>
-  <form action="/action_page.php">
+  <form>
     <label for="fname">Таны нэр:</label> <br>
     <input type="text" id="fname" name="firstname"> <br>
 
