--- a/sem3-4-5/html/contact.html
+++ b/sem3-4-5/html/contact.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Contact</title>
-        <link rel="stylesheet" type="text/css" href="/style.css">
+        <link rel="stylesheet" type="text/css" href="../css/style.css">
         <link rel="icon" type="image/svg" href="../img/mug-hot-solid.svg">
       
       </head>
@@ -20,10 +20,10 @@
         
             <nav>
               <ul>
-                <li><a class="colorWhite" href="../sem_3/coffee_shop/main.html"></a></li>
-                <li><a class="colorWhite" href="../sem_3/about_html/about.html"></a></li>
-                <li><a class="colorWhite" href="/menu.html"></a></li>
-                <li><a class="colorWhite" href="/contact.html"></a></li>
+                <li><a class="colorWhite fullText" href="../html/index.html"></a></li>
+                <li><a class="colorWhite fullText" href="../html/about.html"></a></li>
+                <li><a class="colorWhite fullText" href="../html/menu.html"></a></li>
+                <li><a class="colorWhite fullText" href="../html/contact.html"></a></li>
               </ul>
             </nav>
           </header>
@@ -66,7 +66,7 @@
     </div>
 
     <div class="container">
-        <img class="backImg" src="/fcs344-sem3-images/back.jpg" width="100%">
+        <img class="backImg" src="../img/back.jpg" width="100%">
         <div class="center section">
             <div class="textSide"></div>
 
