--- a/sem3-4-5/html/menu.html
+++ b/sem3-4-5/html/menu.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Menu</title>
-  <link rel="stylesheet" type="text/css" href="/style.css">
+  <link rel="stylesheet" type="text/css" href="../css/style.css">
   <link rel="icon" type="image/svg" href="../img/mug-hot-solid.svg">
 
 </head>
@@ -21,16 +21,16 @@
   
       <nav>
         <ul>
-          <li><a class="colorWhite" href="/index.html"></a></li>
-          <li><a class="colorWhite" href="/about.html"></a></li>
-          <li><a class="colorWhite" href="/menu.html"></a></li>
-          <li><a class="colorWhite" href="/contact.html"></a></li>
+          <li><a class="colorWhite fullText" href="../html/index.html"></a></li>
+          <li><a class="colorWhite fullText" href="../html/about.html"></a></li>
+          <li><a class="colorWhite fullText" href="../html/menu.html"></a></li>
+          <li><a class="colorWhite fullText" href="../html/contact.html"></a></li>
         </ul>
       </nav>
     </header>
     <section class="section bColor">
         <aside>
-            <img class="sectImg"  width="85%" src="/fcs344-sem3-images/home-image-2.jpg">
+            <img class="sectImg"  width="85%" src="../img/home-image-2.jpg">
         </aside>
         <div class="textSide">
             <h2 class="centerText"><span class="ccolor name">Танд санал болгох цэс</h2>
