--- a/sem3-4-5/html/index.html
+++ b/sem3-4-5/html/index.html
@@ -52,7 +52,7 @@
   </section>
 
   <div class="container">
-    <img class="backImg" src="../img/home2v2.jpg" alt="home2">
+    <img class="backImg" src="../img/home2.jpg" alt="home2">
     <div class="center">
       <h1 class="colorWhite">Хамгийн шилдэг үйлчилгээг манайхаас</h1>
       <a href="../html/menu.html" class="button ccolor colorWhite">Цэс сонирхох</a>
