--- a/biydaalt1/public/index.html
+++ b/biydaalt1/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
   <title>Erka AI</title>
 </head>
 
@@ -15,7 +15,7 @@
     data-height=475>
   </div>
   <script src="https://unpkg.com/@rasahq/rasa-chat" type="application/javascript"></script>
-  <!-- Header -->
+
   <section id="header">
     <div class="header container">
       <div class="nav-bar">
@@ -39,10 +39,7 @@
       </div>
     </div>
   </section>
-  <!-- End Header -->
 
-
-  <!-- Hero Section  -->
   <section id="hero">
     <div class="hero container">
       <div>
@@ -53,14 +50,12 @@
         <a href="#projects" type="button" class="cta">Төслүүд</a>
       </div>
       <div style="margin-left:200px ; width: 50vh; height: 50vh; border: 2px solid black; border-radius: 50%; overflow: hidden;">
-        <img src="/img/pro.png" alt="Your Image" style="width: 100%; height: 100%; object-fit: cover;">
+        <img src="../img/pro.png" alt="Your Image" style="width: 100%; height: 100%; object-fit: cover;">
       </div>
       
     </div>
   </section>
-  <!-- End Hero Section  -->
 
-  <!-- Service Section -->
   <section id="services">
     <div class="services container">
       <div class="service-top">
@@ -81,7 +76,7 @@
         <div class="service-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
           <h2>Full stack Developer</h2>
-          <p>HTML, CSS, JavaScrift, Java, Python, Assembly гэх мэт бүх төрлийн Front, Back-end код бичих, Мөн API, Database(MySql, NoSql, Mongodb) гэх мэт бүх төрлийн үүрэг гүйцэтгэнэ6</p>
+          <p>HTML, CSS, JavaScrift, Java, Python, Assembly гэх мэт бүх төрлийн Front, Back-end код бичих, Мөн API, Database(MySql, NoSql, Mongodb) гэх мэт бүх төрлийн үүрэг програмчлал түүний мөн чанартай холбоотой таск гүйцэтгэнэ.</p>
         </div>
         <div class="service-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
@@ -91,9 +86,7 @@
       </div>
     </div>
   </section>
-  <!-- End Service Section -->
 
-  <!-- Projects Section -->
   <section id="projects">
     <div class="projects container">
       <div class="projects-header">
@@ -109,7 +102,7 @@
             </p>
           </div>
           <div class="project-img">
-            <img src="./img/aicar.png" alt="img">
+            <img src="../img/aicar.png" alt="img">
           </div>
         </div>
         <div class="project-item">
@@ -119,7 +112,7 @@
             <p>HTML,CSS,JavaScrift ашиглан хялбар WEB хийж болдог билээ. Тэгвэл NodeJS тэр дундаа TreeJS гэх сан нь 3D дүрс биетүүдийг хөдөлгөх бодит орчинг үүсгэх боломжийг бидэнд олгож байна.</p>
           </div>
           <div class="project-img">
-            <img src="./img/3dweb.png" alt="img">
+            <img src="../img/3dweb.png" alt="img">
           </div>
         </div>
         <div class="project-item">
@@ -129,7 +122,7 @@
             <p>Аппликейшн програмчлалын интерфейс (API) буюу АПИ нь нэг аппликейшн хэрхэн өөр аппликейшнтэй харилцан ажиллахыг тодорхойлох дүрмийн олонлогийг агуулдаг. Үүнд програм хангамжийг байгуулах хэрэгслүүд, протоколууд, subroutine-ууд агуулагдана.</p>
           </div>
           <div class="project-img">
-            <img src="./img/api.png" alt="img">
+            <img src="../img/api.png" alt="img">
           </div>
         </div>
         <div class="project-item">
@@ -142,7 +135,7 @@
               </p>
           </div>
           <div class="project-img">
-            <img src="./img/tusul.png" alt="img">
+            <img src="../img/tusul.png" alt="img">
           </div>
         </div>
         <div class="project-item">
@@ -152,20 +145,18 @@
             <p>Hard skill-ээс гадна хувь хүний чадамж бололцоог дэмждэг, шинийг сурах боломж олгодог зүйлсийн нэг бол сайн дурын ажил юм. Иймд Soft skill-ээ хөгжүүлэх багаар ажиллах чадамжаа дээшлүүлэх хүн хоорондын харилцааг судлах гэх мэт маш олон зүйлс суралцах боломж олгодог.</p>
           </div>
           <div class="project-img">
-            <img src="./img/ict.png" alt="img">
+            <img src="../img/ict.png" alt="img">
           </div>
         </div>
       </div>
     </div>
   </section>
-  <!-- End Projects Section -->
 
-  <!-- About Section -->
   <section id="about">
     <div class="about container">
       <div class="col-left">
         <div class="about-img">
-          <img src="./img/pro.png" alt="img">
+          <img src="../img/pro.png" alt="img">
         </div>
       </div>
       <div class="col-right">
@@ -180,9 +171,7 @@
       </div>
     </div>
   </section>
-  <!-- End About Section -->
 
-  <!-- Contact Section -->
   <section id="contact">
     <div class="contact container">
       <div>
@@ -213,9 +202,7 @@
       </div>
     </div>
   </section>
-  <!-- End Contact Section -->
 
-  <!-- Footer -->
   <section id="footer">
     <div class="footer container">
       <div class="social-icon">
@@ -232,8 +219,8 @@
       <p>Copyright © 2023 Erka. All rights reserved</p>  
     </div>
   </section>
-  <!-- End Footer -->
-  <script src="./index.js"></script>
+
+  <script src="index.js"></script>
 </body>
 
 </html>
