--- a/biydaalt1/public/index.html
+++ b/biydaalt1/public/index.html
@@ -90,59 +90,64 @@
   <section id="projects">
     <div class="projects container">
       <div class="projects-header">
-        <h1 class="section-title">Хийж байгаа болон дууссан <span>ажлууд</span></h1>
+        <h1 class="section-title">Хийж бүтээсэн зүйлс ба ажил <span>карьер</span>-ын туршлага</h1>
       </div>
       <div class="all-projects">
         <div class="project-item">
           <div class="project-info">
-            <h1><a href="./ai car/uhaalag-mashin/src/index.html" target="_blank">Ухаалаг машин</a></h1>
-            <h2>Project NN car</h2>
-            <p>Хиймэл оюун ухаан дээр суурилсан Neural Network ашиглан замын өгөгдөл 
-              дээр үндэслэн явах чиглэлээ өөрчилөн явах жолоочгүй машины жишээ юм. Жолоочгүй машин нь бидний амьдралын нэг хэсэг болоход тун ойрхон байна
+            <h1><a>GS-25</a></h1>
+            <h2>Сүлжээний инженер</h2>
+            <p>
+              2021 онд GS25-ын оффист сүлжээний инженерээр хагас цалинтай ажиллаж IT-ын салбарт анх удаа хөл тавьсан. GS25-д ажиллаж байх хугацаандаа network map сүлжээ холболт зэрэг ерөнхий мэдлэгийг эзэмшиж чадсан.   
             </p>
           </div>
           <div class="project-img">
-            <img src="../img/aicar.png" alt="img">
+            <img src="../img/gs25.png" alt="img">
           </div>
         </div>
         <div class="project-item">
           <div class="project-info">
-            <h1><a href="./web/3D-mars/index.html" target="_blank">3D Mars</a></h1>
-            <h2>Project Node TreeJS WEB</h2>
-            <p>HTML,CSS,JavaScrift ашиглан хялбар WEB хийж болдог билээ. Тэгвэл NodeJS тэр дундаа TreeJS гэх сан нь 3D дүрс биетүүдийг хөдөлгөх бодит орчинг үүсгэх боломжийг бидэнд олгож байна.</p>
+            <h1><a>Self made Start Up</a></h1>
+            <h2>Full Stack Developer</h2>
+            <p>
+              2022 онд найзуудын хамт апп хөгжүүлж, хамгийн их алдаж мөн хамгийн их зүйл сурч чадсан чухал мөчүүдийн нэг. Тухайн үед React Native Tree.JS MongoDB Express.js болон бусад tool үүдийг ашиглаж бүрэн ажиллагаат апп хийж сурсан.
+            </p>
           </div>
           <div class="project-img">
-            <img src="../img/3dweb.png" alt="img">
+            <img src="../img/startup.png" alt="img">
           </div>
         </div>
         <div class="project-item">
           <div class="project-info">
-            <h1><a href="api/api.html" target="_blank">API Connection</a></h1>
-            <h2>Project API</h2>
-            <p>Аппликейшн програмчлалын интерфейс (API) буюу АПИ нь нэг аппликейшн хэрхэн өөр аппликейшнтэй харилцан ажиллахыг тодорхойлох дүрмийн олонлогийг агуулдаг. Үүнд програм хангамжийг байгуулах хэрэгслүүд, протоколууд, subroutine-ууд агуулагдана.</p>
+            <h1><a>Хаан Банк</a></h1>
+            <h2>Төслийн менежер болон Scrum Master</h2>
+            <p>
+              2023 онд Хаан банкны цалинтай дадлагажих хөтөлбөрт тэнцэж PMO төслийн менежер болон автоматжуулалтын маш олон туршлага цуглуулж чадсан. Төслийн менежерээр ажиллах үедээ хүмүүстэй харьцах, гэрээ хэлэлцээр байгуулах, баг удирдах чиглүүлэх, цагийн менежмент зэрэг маш үнэ цэнтэй soft skill -үүдийг сурсан. 
+            </p>
           </div>
           <div class="project-img">
-            <img src="../img/api.png" alt="img">
+            <img src="../img/haanbank.png" alt="img">
           </div>
         </div>
         <div class="project-item">
           <div class="project-info">
-            <h1><a href="project/project2.pdf" target="_blank">Төсөл хөгжүүлэх</a></h1>
-            <h2>Програм хангамжийн процесс</h2>
-            <p>Процессийг үүсгэх тайлбарлах, өгөгдлийн
-              загварыг тодорхойлох, хэрэглэгчийн интерфэйсийн
-              зохиох, эдгээр үйл ажиллагааг эрэмбэлэх, тайлан бэлдэх мөн Agile, хүрхрээ, нэмэгдэх гэх мэт аргыг ашиглан хөгжүүлэх.
-              </p>
+            <h1><a>Next Social Platform</a></h1>
+            <h2>AI Developer</h2>
+            <p>
+              2023 оны сүүлээр Next Social Platform-д анх удаа мэргэжлийн дагуу ажиллаж эхэллээ. Ажилд саяхан орсон мэт боловч маш бага хугацаанд олон зүйлс бие даан сурч Chatbot.mn (Version2) MongolNET (AI-chatbot) гэх мэт ажлуудад нэрээ үлдээж NLP буюу эх хэлний боловсруулалт гэх ойлголт руу 1 алхам ойртож чадлаа. 
+            </p>
           </div>
           <div class="project-img">
-            <img src="../img/tusul.png" alt="img">
+            <img src="../img/nsp.png" alt="img">
           </div>
         </div>
         <div class="project-item">
           <div class="project-info">
-            <h1><a href="volunteer/volunteer.html" target="_blank">Сайн дурын ажил</a></h1>
+            <h1><a>Сайн дурын ажил</a></h1>
             <h2>Volunteer</h2>
-            <p>Hard skill-ээс гадна хувь хүний чадамж бололцоог дэмждэг, шинийг сурах боломж олгодог зүйлсийн нэг бол сайн дурын ажил юм. Иймд Soft skill-ээ хөгжүүлэх багаар ажиллах чадамжаа дээшлүүлэх хүн хоорондын харилцааг судлах гэх мэт маш олон зүйлс суралцах боломж олгодог.</p>
+            <p>
+              2022 оноос хойш сайн дурын ажлуудад оролцож эхэлсэн. Volunteer ажлууд нь дан ганц нийгмийн идэвхийг харуулаас гадна Networking хийх маш олон шинэ хүмүүс, салбарын тэргүүлэгч үлгэр жишээ хүмүүстэй санаа бодлоо солилцох чухал мөчүүдийн нэг.
+            </p>
           </div>
           <div class="project-img">
             <img src="../img/ict.png" alt="img">
@@ -167,7 +172,7 @@
           Суралцах хугацаандаа давхар олон төрлийн ажил хийдэг байсан бөгөөд тэр дундаас хамгийн таалагдсан нь Бизнес судлал 
           байсан. Иймд IT-ийн чадвартай хослуулан цаашид ажиллах хүсэлтэй.
         </p>
-        <a href="/Уртнасан Эрхэмхүү.pdf" class="cta" target="_blank">CV татах</a>
+        <a href="../src/myinfo.pdf" class="cta" target="_blank">CV татах</a>
       </div>
     </div>
   </section>
