--- a/biydaalt1/index.html
+++ b/biydaalt1/index.html
@@ -52,7 +52,7 @@
             <a href="#projects" type="button" class="cta">Төслүүд</a>
           </div>
           <div style="margin-left:200px ; width: 50vh; height: 50vh; border: 2px solid black; border-radius: 50%; overflow: hidden;">
-            <img src="../img/pro.png" alt="Your Image" style="width: 100%; height: 100%; object-fit: cover;">
+            <img src="img/pro.png" alt="Your Image" style="width: 100%; height: 100%; object-fit: cover;">
           </div>
           
         </div>
@@ -104,7 +104,7 @@
                 </p>
               </div>
               <div class="project-img">
-                <img src="../img/gs25.png" alt="img">
+                <img src="img/gs25.png" alt="img">
               </div>
             </div>
             <div class="project-item">
@@ -116,7 +116,7 @@
                 </p>
               </div>
               <div class="project-img">
-                <img src="../img/startup.png" alt="img">
+                <img src="img/startup.png" alt="img">
               </div>
             </div>
             <div class="project-item">
@@ -128,7 +128,7 @@
                 </p>
               </div>
               <div class="project-img">
-                <img src="../img/haanbank.png" alt="img">
+                <img src="img/haanbank.png" alt="img">
               </div>
             </div>
             <div class="project-item">
@@ -140,7 +140,7 @@
                 </p>
               </div>
               <div class="project-img">
-                <img src="../img/nsp.png" alt="img">
+                <img src="img/nsp.png" alt="img">
               </div>
             </div>
             <div class="project-item">
@@ -152,7 +152,7 @@
                 </p>
               </div>
               <div class="project-img">
-                <img src="../img/ict.png" alt="img">
+                <img src="img/ict.png" alt="img">
               </div>
             </div>
           </div>
@@ -163,7 +163,7 @@
         <div class="about container">
           <div class="col-left">
             <div class="about-img">
-              <img src="../img/pro.png" alt="img">
+              <img src="img/pro.png" alt="img">
             </div>
           </div>
           <div class="col-right">
@@ -174,7 +174,7 @@
               Суралцах хугацаандаа давхар олон төрлийн ажил хийдэг байсан бөгөөд тэр дундаас хамгийн таалагдсан нь Бизнес судлал 
               байсан. Иймд IT-ийн чадвартай хослуулан цаашид ажиллах хүсэлтэй.
             </p>
-            <a href="../src/myinfo.pdf" class="cta" target="_blank">CV татах</a>
+            <a href="src/myinfo.pdf" class="cta" target="_blank">CV татах</a>
           </div>
         </div>
       </section>
